<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/historyLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="7dp">

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/lottery_number"
                android:clickable="false"
                android:text="@string/date"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/lottery_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/lottery_number"
                android:textColor="@color/colorPrimary"
                android:textSize="21sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/seeMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lottery_number"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="10dp"
                android:clickable="false"
                android:src="@drawable/expend_down" />

        </RelativeLayout>

        <!-- invisible layout-->
        <RelativeLayout
            android:id="@+id/moreLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/historyLayout"
            android:padding="14dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/id_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/id_text"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/betSlipId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/id"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/amount_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/id_text"
                android:layout_alignParentStart="true"
                android:layout_marginTop="7dp"
                android:text="@string/amount_text"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/betSlipId"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="7dp"
                android:text="@string/amount"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/isWin_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/amount_text"
                android:layout_alignParentStart="true"
                android:layout_marginTop="7dp"
                android:text="@string/isWin_text"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/isWin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/amount"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="7dp"
                android:text="@string/isWin"
                android:textSize="14sp" />

        </RelativeLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>